[gd_scene load_steps=14 format=3 uid="uid://difuxpjwy1as0"]

[ext_resource type="Script" path="res://scripts/camera_3d.gd" id="1_0aqul"]
[ext_resource type="Script" path="res://scripts/lights.gd" id="3_sa3l7"]
[ext_resource type="PackedScene" uid="uid://b21mla0mmqooh" path="res://scenes/bighead_mouth.tscn" id="3_v2hqq"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="3_wolhj"]
[ext_resource type="PackedScene" uid="uid://b5uoxr64dalnc" path="res://scenes/minihead.tscn" id="4_pfx8g"]
[ext_resource type="PackedScene" uid="uid://cjado2kq3cddc" path="res://scenes/kismylogo.tscn" id="5_ei8dp"]
[ext_resource type="PackedScene" uid="uid://drqauncirvk42" path="res://scenes/bezos.tscn" id="6_mhbdy"]
[ext_resource type="PackedScene" uid="uid://8tkplkngf0rx" path="res://scenes/blood.tscn" id="7_sgbml"]
[ext_resource type="PackedScene" uid="uid://342w54ahp6an" path="res://scenes/kismyphoto.tscn" id="8_ua4vg"]
[ext_resource type="PackedScene" uid="uid://dj8mqnrwi25lw" path="res://scenes/zuck.tscn" id="9_hyojn"]
[ext_resource type="PackedScene" uid="uid://dd26qcivhfibw" path="res://scenes/sanglier.tscn" id="10_l82df"]

[sub_resource type="Environment" id="Environment_gn15j"]
background_mode = 1
background_energy_multiplier = 0.0
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.0

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_rfgv6"]

[node name="World" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 68)
current = true
fov = 41.0
script = ExtResource("1_0aqul")

[node name="KismyderFace" parent="." instance=ExtResource("3_v2hqq")]

[node name="Spawner" type="Node3D" parent="KismyderFace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.99321, 1.5)
script = ExtResource("3_wolhj")
instance_scene = Array[PackedScene]([ExtResource("6_mhbdy"), ExtResource("7_sgbml"), ExtResource("5_ei8dp"), ExtResource("4_pfx8g"), ExtResource("8_ua4vg"), ExtResource("9_hyojn"), ExtResource("10_l82df")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gn15j")

[node name="Lights" type="Node3D" parent="."]
script = ExtResource("3_sa3l7")

[node name="Light1" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
light_color = Color(1, 0.75, 0.75, 1)

[node name="Light2" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.707107, -0.298836, -0.640857, 0, 0.906308, -0.422618, 0.707107, 0.298836, 0.640857, 0, 0, 0)
light_color = Color(0.875, 1, 0.75, 1)

[node name="Light3" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(-0.906308, 0.178606, -0.383022, 0, 0.906308, 0.422618, 0.422618, 0.383022, -0.821394, 0, 0, 0)
light_color = Color(1, 1, 0.75, 1)

[node name="Boundaries" type="StaticBody3D" parent="."]

[node name="D" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -16, 0)
shape = SubResource("WorldBoundaryShape3D_rfgv6")

[node name="U" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 32, 0)
shape = SubResource("WorldBoundaryShape3D_rfgv6")

[node name="N" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, -16)
shape = SubResource("WorldBoundaryShape3D_rfgv6")

[node name="S" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0, 0, 32)
shape = SubResource("WorldBoundaryShape3D_rfgv6")

[node name="E" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 32, 0, 0)
shape = SubResource("WorldBoundaryShape3D_rfgv6")

[node name="O" type="CollisionShape3D" parent="Boundaries"]
transform = Transform3D(4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, -3.82137e-15, -8.74228e-08, -1, -32, 0, 0)
shape = SubResource("WorldBoundaryShape3D_rfgv6")

[node name="TextInputWindow" type="Window" parent="."]
title = "Texto"
position = Vector2i(747, 274)
size = Vector2i(320, 240)
transient = true

[node name="TextEdit" type="TextEdit" parent="TextInputWindow"]
offset_right = 320.0
offset_bottom = 240.0
placeholder_text = "Ã‰crivaille ton texte ici..."
wrap_mode = 1

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("bezos", "blood", "kismylogo", "kismyphoto", "minihead", "sanglier", "zuck"), [ExtResource("6_mhbdy"), ExtResource("7_sgbml"), ExtResource("5_ei8dp"), ExtResource("8_ua4vg"), ExtResource("4_pfx8g"), ExtResource("10_l82df"), ExtResource("9_hyojn")]]
